# securehid-fw

./: .gitignore  CMakeLists.txt  adjectives.py  hexcom.py  hexdump.py  hexnoise.py  keymap.py  libusbhost_stm32f4.ld  nouns.py  openocd.cfg  pairing.py
include/: cobs.h
src/: CMakeLists.txt  adjectives.c  cobs.c  demo.c  frama_c_cmdline  hid_keycodes.c  hid_keycodes.h  noise.c  noise.h  nouns.c  packet_interface.c  packet_interface.h  pgp_wordlist  rand_stm32.c  rand_stm32.h  tinyprintf.c  tracing.h  usart_helpers.c  usart_helpers.h  usbh_driver_hid.c  usbh_lld_stm32f4.c  words.c  words.h
src/crypto/: CMakeLists.txt
